--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  height: 80vh;
+  margin: 5vh;
+  padding-top: 8vh;
+  /* background-color: blue; */
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center; 
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  width: 80%;
+  height: 6vh;
+  text-align: center;
+  font-size: 8vh;
+  padding-bottom: 10vh;
+  /* background-color: rgb(255, 17, 0);  */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons {
+  width: 80%;
+  height: 10vh;
+  /* background-color: rgb(255, 17, 0); */
+}
+
+.table {
+  width: 80%;
+  height: 60vh;
+  /* background-color: orange; */
 }
